@@ -283,32 +283,32 @@ public class NMEAReaderWriter {
 
 				//write filename after import to record description
 				activeChannel.get(recordSetName).descriptionAppendFilename(filePath.substring(filePath.lastIndexOf(GDE.CHAR_FILE_SEPARATOR_UNIX)+1));
-				if (data.pressureOffsetCount > 0) {
+				if (data.airPressures.getMaxEntryCount() > 0) {
 					StringBuilder sb = new StringBuilder();
 					if (data.countAvg40 > 0 && data.countAvgDp1 > 0 && data.countAvg70 > 0) {
 						sb.append(String.format("\n%s - offset = %.3f; count = %3d, %3d, %3d; avgAirSpeed = %03.1f, %03.1f, %03.1f; avgPressure ∆TEK = %.2f, %.2f, %.2f",
-								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.sumPressureOffset / data.pressureOffsetCount / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70,
+								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.airPressures.getAvgDiffMaxCount() / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70,
 								data.avgAirSpeed40 / data.countAvg40 / 1000., data.avgAirSpeedDp1 / data.countAvgDp1 / 1000., data.avgAirSpeed70 / data.countAvg70 / 1000.,
 								data.avgPressureDeltaTec40 / data.countAvg40 / 1000., data.avgPressureDeltaTecDp1 / data.countAvgDp1 / 1000., data.avgPressureDeltaTec70 / data.countAvg70 / 1000.));
 						log.log(Level.INFO, sb.toString());
 					}
 					else if (data.countAvg40 == 0 && data.countAvgDp1 > 0 && data.countAvg70 > 0) {
 						sb.append(String.format("\n%s - offset = %.3f; count = %3d, %3d, %3d; avgAirSpeed = %03.1f, %03.1f, %03.1f; avgPressure ∆TEK = %.2f, %.2f, %.2f",
-								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.sumPressureOffset / data.pressureOffsetCount / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70, 40.0,
+								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.airPressures.getAvgDiffMaxCount() / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70, 40.0,
 								data.avgAirSpeedDp1 / data.countAvgDp1 / 1000., data.avgAirSpeed70 / data.countAvg70 / 1000., 0.0, data.avgPressureDeltaTecDp1 / data.countAvgDp1 / 1000.,
 								data.avgPressureDeltaTec70 / data.countAvg70 / 1000.));
 						log.log(Level.INFO, sb.toString());
 					}
 					else if (data.countAvg40 > 0 && data.countAvgDp1 == 0 && data.countAvg70 > 0) {
 						sb.append(String.format("\n%s - offset = %.3f; count = %3d, %3d, %3d; avgAirSpeed = %03.1f, %03.1f, %03.1f; avgPressure ∆TEK = %.2f, %.2f, %.2f",
-								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.sumPressureOffset / data.pressureOffsetCount / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70,
+								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.airPressures.getAvgDiffMaxCount() / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70,
 								data.avgAirSpeed40 / data.countAvg40 / 1000., 00.0, data.avgAirSpeed70 / data.countAvg70 / 1000., data.avgPressureDeltaTec40 / data.countAvg40 / 1000., 1.0,
 								data.avgPressureDeltaTec70 / data.countAvg70 / 1000.));
 						log.log(Level.INFO, sb.toString());
 					}
 					else if (data.countAvg40 > 0 && data.countAvgDp1 > 0 && data.countAvg70 == 0) {
 						sb.append(String.format("\n%s - offset = %.3f; count = %3d, %3d, %3d; avgAirSpeed = %03.1f, %03.1f, %03.1f; avgPressure ∆TEK = %.2f, %.2f, %.2f",
-								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.sumPressureOffset / data.pressureOffsetCount / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70,
+								filePath.substring(filePath.lastIndexOf(GDE.FILE_SEPARATOR) + 1), data.airPressures.getAvgDiffMaxCount() / 1000., data.countAvg40, data.countAvgDp1, data.countAvg70,
 								data.avgAirSpeed40 / data.countAvg40 / 1000., data.avgAirSpeedDp1 / data.countAvgDp1 / 1000., 70.0, data.avgPressureDeltaTec40 / data.countAvg40 / 1000.,
 								data.avgPressureDeltaTecDp1 / data.countAvgDp1 / 1000., 0.0));
 						log.log(Level.INFO, sb.toString());
